--- a/index.html
+++ b/index.html
@@ -40,23 +40,81 @@
                             </svg>+380961111111</a>
                     </li>
                 </ul>
-            </nav>
+                <button class=" burger__btn burger__btn--opened js-open-menu" aria-expanded="false"
+                    aria-controls="mobile-menu">
+                    <svg class="burger__icon">
+                        <use href="./images/symbol-defs__menu.svg#icon-menu"></use>
+                    </svg>
+                </button>
+
+                <div class="mobile-menu js-menu-container is-open" id="mobile-menu">
+                    <div class="menu-container">
+                        <button class="burger__btn burger__btn--closed js-close-menu">
+                            <svg class="burger__icon">
+                                <use href="./images/symbol-defs-min.svg#icon-close-black-18dp-2-1"></use>
+                            </svg>
+                        </button>
+                        <div class="mobile-nav">
+                            <ul class="mobile-nav__list">
+                                <li class="mobile-nav__item"><a class="mobile-nav__link mobile-nav__link--current"
+                                        href="./index.html">Студія</a>
+                                </li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link"
+                                        href="./portfolio.html">Портфоліо</a>
+                                </li>
+                                <li class="mobile-nav__item"><a class="mobile-nav__link" href=".">Контакти</a></li>
+                            </ul>
+                        </div>
+                        <div class="mobile-contact">
+                            <ul class="mobile-contact__list">
+                                <li class="mobile-contact__item">
+                                    <a class="mobile-contact__link" href="tel:+380961111111">+380961111111</a>
+                                </li>
+                                <li class="mobile-contact__item">
+                                    <a class="mobile-contact__link"
+                                        href="mailto:info@devstudio.com">info@devstudio.com</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="mobile-socials">
+                            <ul class="mobile-socials__list">
+                                <li class="mobile-socials__item"><a href="" class="mobile-socials__link">Instagram</a>
+                                </li>
+                                <li class="mobile-socials__item"><a href="" class="mobile-socials__link">Twitter</a>
+                                </li>
+                                <li class="mobile-socials__item"><a href="" class="mobile-socials__link">Facebook</a>
+                                </li>
+                                <li class="mobile-socials__item"><a href="" class="mobile-socials__link">LinkedIn</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
         </div>
+        </nav>
+        </div>
+
     </header>
     <main>
-        <section class="hero">
-            <div class="hero__overlay">
-                <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-                <button class="hero__button" type="button" data-modal-open>Замовити послугу</button>
+        <section class=" hero">
+            <div class="hero__container">
+                <div class="hero__overlay">
+                    <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+                    <button class="hero__button" type="button" data-modal-open>Замовити
+                        послугу</button>
+                </div>
             </div>
+
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
                     <form class="personal-data">
-                        <p class="personal-data__label">Залиште свої дані, ми вам передзвонимо</p>
+                        <p class="personal-data__label">Залиште свої дані, ми вам передзвонимо
+                        </p>
                         <div class="form-field">
                             <label class="form-field__label" for="name">Ім'я</label>
                             <svg class="form-field__person">
-                                <use href="./images/symbol-defs-min-4.svg#icon-person-black"></use>
+                                <use href="./images/symbol-defs-min-4.svg#icon-person-black">
+                                </use>
                             </svg>
                             <input class="form-field__input" type="text" name="name" id="name" />
 
@@ -64,13 +122,15 @@
                         <div class="form-field"> <label class="form-field__label" for="tel">Телефон</label>
                             <input class="form-field__input" type="tel" name="tel" id="tel" />
                             <svg class="form-field__phone">
-                                <use href="./images/symbol-defs-min-4.svg#icon-phone-black"></use>
+                                <use href="./images/symbol-defs-min-4.svg#icon-phone-black">
+                                </use>
                             </svg>
                         </div>
                         <div class="form-field"> <label class="form-field__label" for="mail">Пошта</label>
                             <input class="form-field__input" type="email" name="mail" id="mail" />
                             <svg class="form-field__email">
-                                <use href="./images/symbol-defs-min-4.svg#icon-email-black"></use>
+                                <use href="./images/symbol-defs-min-4.svg#icon-email-black">
+                                </use>
                             </svg>
                         </div>
                         <div class="form-comment"> <label class="form-comment__label" for="comment">Коментарій</label>
@@ -86,7 +146,8 @@
                         <button class="submit-btn" type="submit">Відправити</button>
                         <button class="close-button" data-modal-close>
                             <svg class="close-button__icon">
-                                <use href="./images/symbol-defs-min.svg#icon-close-black-18dp-2-1"></use>
+                                <use href="./images/symbol-defs-min.svg#icon-close-black-18dp-2-1">
+                                </use>
                             </svg>
                         </button>
                     </form>
@@ -99,27 +160,31 @@
                 <ul class="features__list">
                     <li class="features__list__item">
                         <h3 class="features__list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="features__list__title__explanation">Ідейні міркування, і навіть початок повсякденної
+                        <p class="features__list__title__explanation">Ідейні міркування, і
+                            навіть початок повсякденної
                             роботи з
                             формування позиції.</p>
                     </li>
                     <li class="features__list__item">
                         <h3 class="features__list__title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="features__list__title__explanation">Завдання організації, особливо рамки і місце
+                        <p class="features__list__title__explanation">Завдання організації,
+                            особливо рамки і місце
                             навчання
                             кадрів
                             тягне у себе.</p>
                     </li>
                     <li class="features__list__item">
                         <h3 class="features__list__title">ПЛАНУВАННЯ</h3>
-                        <p class="features__list__title__explanation">Так само консультація з широким активом значною
+                        <p class="features__list__title__explanation">Так само консультація
+                            з широким активом значною
                             мірою
                             зумовлює.
                         </p>
                     </li>
                     <li class="features__list__item">
                         <h3 class="features__list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="features__list__title__explanation">Значимість цих проблем настільки очевидна, що
+                        <p class="features__list__title__explanation">Значимість цих проблем
+                            настільки очевидна, що
                             реалізація
                             планових <br /> завдань.</p>
                     </li>
@@ -159,8 +224,11 @@
                 <h2 class="section-people-list__title">Наша команда</h2>
                 <ul class="people-list">
                     <li class="people-list__item">
+
+
                         <img class="people-item" src="./images/maninbrownshirt.jpg"
                             alt="чоловік в окулярах та коричневой сорочці" width="270" height="260">
+
                         <h3 class="people-list__name">Ігор Дем'яненко</h3>
                         <p class="people-list__label">Product Designer</p>
                         <ul class="social-icons">
@@ -192,8 +260,10 @@
                         </ul>
                     </li>
                     <li class="people-list__item">
+
                         <img class="people-item" src="./images/woman.jpg" alt="жінка в окулярах" width="270"
                             height="260">
+
                         <h3 class="people-list__name">Ольга Рєпіна</h3>
                         <p class="people-list__label">Frontend Developer</p>
                         <ul class="social-icons">
@@ -225,8 +295,10 @@
                         </ul>
                     </li>
                     <li class="people-list__item">
+
                         <img class="people-item" src="./images/maninblueshirt-2.jpg" alt="чоловік в білій сорочці"
                             width="270" height="260">
+
                         <h3 class="people-list__name">Микола Тарасов</h3>
                         <p class="people-list__label">Marketing</p>
                         <ul class="social-icons">
@@ -258,8 +330,10 @@
                         </ul>
                     </li>
                     <li class="people-list__item">
+
                         <img class="people-item" src="./images/manint-shirt.jpg" alt="чоловік в окулярах та футболці"
                             width="270" height="260">
+
                         <h3 class="people-list__name">Михайло Єрмаков</h3>
                         <p class="people-list__label">UI Designer</p>
                         <ul class="social-icons">
@@ -304,19 +378,22 @@
                     </li>
                     <li class="company__item">
                         <a href="/" class="company__clients"> <svg class="company__icon">
-                                <use href="./images/sprite-companies.svg#icon-tagline-here"></use>
+                                <use href="./images/sprite-companies.svg#icon-tagline-here">
+                                </use>
                             </svg>
                         </a>
                     </li>
                     <li class="company__item">
                         <a href="/" class="company__clients"> <svg class="company__icon">
-                                <use href="./images/sprite-companies.svg#icon-company"></use>
+                                <use href="./images/sprite-companies.svg#icon-company">
+                                </use>
                             </svg>
                         </a>
                     </li>
                     <li class="company__item">
                         <a href="/" class="company__clients"> <svg class="company__icon">
-                                <use href="./images/sprite-companies.svg#icon-foster-people"></use>
+                                <use href="./images/sprite-companies.svg#icon-foster-people">
+                                </use>
                             </svg>
                         </a>
                     </li>
@@ -328,7 +405,8 @@
                     </li>
                     <li class="company__item">
                         <a href="/" class="company__clients"> <svg class="company__icon">
-                                <use href="./images/sprite-companies.svg#icon-tagline"></use>
+                                <use href="./images/sprite-companies.svg#icon-tagline">
+                                </use>
                             </svg>
                         </a>
                     </li>
@@ -348,7 +426,8 @@
                             <a href="/">м. Київ, пр-т Лесі Українки, 26</a>
                         </li>
                         <li class="nav-footer__mail"><a class="nav-footer__link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                                href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
                         <li class="nav-footer__phone"><a class="nav-footer__link"
                                 href=" tel:+380961111111">+380961111111</a></li>
                     </ul>
@@ -385,11 +464,13 @@
                 <form class="join__form">
                     <label class="join__label" for="mail"></label>
                     <input class="join__input" type="email" name="mail" id="mail" placeholder="E-mail" />
-                    <div class="join__button"><button type="button">Підписатися</button></div>
+                    <div class="join__button"><button type="button">Підписатися</button>
+                    </div>
                 </form>
             </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
